--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="top">
         <div class="logo">
           <img src="images/logo.png" alt="Logo">
-          <h2>EGA <span class="danger">TOR</span></h2>
+          <h2>EGA<span class="danger">TOR</span></h2>
         </div>
         <div class="close" id="close-btn">
           <span class="material-icons-sharp">close<span>
@@ -25,7 +25,7 @@
           <span class="material-icons-sharp">grid_view</span>
           <h3>Dashboard</h3>
         </a>
-        <a href="#">
+        <a href="#" class="active">
           <span class="material-icons-sharp">person_outline</span>
             <h3>Customers</h3>
         </a>
@@ -38,7 +38,7 @@
           <h3>Analytics</h3>
         </a>
         <a href="#">
-          <span class="material-icons-sharp">mail_outlined</span>
+          <span class="material-icons-sharp">mail</span>
           <h3>Messages</h3>
           <span class="message-count">26</span>
         </a>
