main✔✔ next right side

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Responsive website</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -64,6 +65,128 @@
         </a>
       </div>
     </aside>
+    <!--*------------------ASIDE end--------------------------->
+    <main>
+      <h1>Dashboard</h1>
+
+      <div class="date">
+        <input type="date">
+      </div>
+      <div class="insight">
+        <div class="sales">
+          <span class="material-icons-sharp">analytics</span>
+          <div class="middle">
+            <div class="left">
+              <h3>Total Sales</h3>
+              <h1>$69,420</h1>
+            </div>
+            <div class="progress">
+              <svg>
+                <circle cx="38" cy="38" r="36"/>
+              </svg>
+              <div class="number">
+                <p>69%</p>
+              </div>
+            </div>
+          </div>
+          <small class="text-mutes">last 24 hours</small>
+        </div>
+        <!--*----------------------END SALES---------------------------->
+        <div class="expanses">
+          <span class="material-icons-sharp">bar_chart</span>
+          <div class="middle">
+            <div class="left">
+              <h3>Total Expanses</h3>
+              <h1>$10,600</h1>
+            </div>
+            <div class="progress">
+              <svg>
+                <circle cx="38" cy="38" r="36"/>
+              </svg>
+              <div class="number">
+                <p>81%</p>
+              </div>
+            </div>
+          </div>
+          <small class="text-mutes">last 24 hours</small>
+        </div>
+        <!--*----------------------END EXPENSES---------------------------->
+        <div class="income">
+          <span class="material-icons-sharp">stacked_line_chart</span>
+          <div class="middle">
+            <div class="left">
+              <h3>Total income</h3>
+              <h1>$10,829</h1>
+            </div>
+            <div class="progress">
+              <svg>
+                <circle cx="38" cy="38" r="36"/>
+              </svg>
+              <div class="number">
+                <p>69%</p>
+              </div>
+            </div>
+          </div>
+          <small class="text-mutes">last 24 hours</small>
+        </div>
+        <!--*----------------------END INCOME---------------------------->
+      </div>
+      <!--*----------------------END OF INSIGHT---------------------------->
+
+      <div class="recent-order">
+        <h2>Recent Orders</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Product Name</th>
+              <th>Product Number</th>
+              <th>Payment</th>
+              <th>Status</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Foldable Mini Drone</td>
+              <td>78687</td>
+              <td>Due</td>
+              <td class="warning">Pending</td>
+              <td class="Primary">Details</td>
+            </tr>
+            <tr>
+              <td>Foldable Mini Drone</td>
+              <td>78687</td>
+              <td>Due</td>
+              <td class="warning">Pending</td>
+              <td class="Primary">Details</td>
+            </tr>
+            <tr>
+              <td>Foldable Mini Drone</td>
+              <td>78687</td>
+              <td>Due</td>
+              <td class="warning">Pending</td>
+              <td class="Primary">Details</td>
+            </tr>
+            <tr>
+              <td>Foldable Mini Drone</td>
+              <td>78687</td>
+              <td>Due</td>
+              <td class="warning">Pending</td>
+              <td class="Primary">Details</td>
+            </tr>
+            <tr>
+              <td>Foldable Mini Drone</td>
+              <td>78687</td>
+              <td>Due</td>
+              <td class="warning">Pending</td>
+              <td class="Primary">Details</td>
+            </tr>
+          </tbody>
+        </table>
+        <a href="#">Show all</a>
+      </div>
+    </main>
+    <!--*-------------------------END OF MAIN----------------------------->
   </div>
 </body>
 </html>
