--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="container">
     <aside>
@@ -28,7 +30,7 @@
         </a>
         <a href="#" class="active">
           <span class="material-icons-sharp">person_outline</span>
-            <h3>Customers</h3>
+          <h3>Customers</h3>
         </a>
         <a href="#">
           <span class="material-icons-sharp">receipt_long</span>
@@ -82,7 +84,7 @@
             </div>
             <div class="progress">
               <svg>
-                <circle cx="38" cy="38" r="36"/>
+                <circle cx="38" cy="38" r="36" />
               </svg>
               <div class="number">
                 <p>69%</p>
@@ -101,7 +103,7 @@
             </div>
             <div class="progress">
               <svg>
-                <circle cx="38" cy="38" r="36"/>
+                <circle cx="38" cy="38" r="36" />
               </svg>
               <div class="number">
                 <p>81%</p>
@@ -120,7 +122,7 @@
             </div>
             <div class="progress">
               <svg>
-                <circle cx="38" cy="38" r="36"/>
+                <circle cx="38" cy="38" r="36" />
               </svg>
               <div class="number">
                 <p>69%</p>
@@ -187,6 +189,110 @@
       </div>
     </main>
     <!--*-------------------------END OF MAIN----------------------------->
+
+    <div class="right">
+      <div class="top">
+        <button id="menu-btn">
+          <span class="material-icons-sharp">menu</span>
+        </button>
+        <div class="theme-toggle">
+          <span class="material-icons-sharp active">light_mode</span>
+          <span class="material-icons-sharp">nightlight_round</span>
+        </div>
+        <div class="profile">
+          <div class="info">
+            <p>Hey, <b>Danial</b></p>
+            <small class="text-muted">Admin</small>
+          </div>
+          <div class="profile-photo">
+            <img src="images/profile-1.jpg">
+          </div>
+        </div>
+      </div>
+      <!------------------------------------END OF TOP------------------------------------>
+      <div class="recent-updates">
+        <h2>Recent updates</h2>
+        <div class="updates">
+          <div class="update">
+            <div class="profile-photo">
+              <img src="images/profile-2.jpg" alt="">
+            </div>
+            <div class="message">
+              <p><b>Mike Tyson</b> received his order of Night lion tech GPS drone.</p>
+              <small class="text-muted">2 Minutes ago</small>
+            </div>
+          </div>
+          <div class="update">
+            <div class="profile-photo">
+              <img src="images/profile-3.jpg" alt="">
+            </div>
+            <div class="message">
+              <p><b>Mike Tyson</b> received his order of Night lion tech GPS drone.</p>
+              <small class="text-muted">2 Minutes ago</small>
+            </div>
+          </div>
+          <div class="update">
+            <div class="profile-photo">
+              <img src="images/profile-4.jpg" alt="">
+            </div>
+            <div class="message">
+              <p><b>Mike Tyson</b> received his order of Night lion tech GPS drone.</p>
+              <small class="text-muted">2 Minutes ago</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--*----------------------------END OF RECENT UPDATES------------------------------>
+      <div class="sales-analytics">
+        <h2>Sales Analytics</h2>
+        <div class="item online">
+          <div class="icon">
+            <span class="material-icons-sharp">shopping_cart</span>
+          </div>
+          <div class="right">
+            <div class="info">
+              <h3>ONLINE ORDERS</h3>
+              <small class="text-muted">last 24 hours</small>
+            </div>
+            <h5 class="success">+39%</h5>
+            <h3>3244</h3>
+          </div>
+        </div>
+        <div class="item offline">
+          <div class="icon">
+            <span class="material-icons-sharp">local_mall</span>
+          </div>
+          <div class="right">
+            <div class="info">
+              <h3>OFFLINE ORDERS</h3>
+              <small class="text-muted">last 24 hours</small>
+            </div>
+            <h5 class="danger">-14%</h5>
+            <h3>1244</h3>
+          </div>
+        </div>
+        <div class="item customers">
+          <div class="icon">
+            <span class="material-icons-sharp">person</span>
+          </div>
+          <div class="right">
+            <div class="info">
+              <h3>NEW CUSTOMERS</h3>
+              <small class="text-muted">last 24 hours</small>
+            </div>
+            <h5 class="success">+29%</h5>
+            <h3>984</h3>
+          </div>
+        </div>
+        <div class="item add-products">
+          <div class="">
+            <span class="material-icons-sharp">add</span>
+            <h3>Add Product</h3>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
+
 </html>
