--- a/index.html
+++ b/index.html
@@ -148,41 +148,13 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <!-- <tr>
               <td>Foldable Mini Drone</td>
               <td>78687</td>
               <td>Due</td>
               <td class="warning">Pending</td>
               <td class="Primary">Details</td>
-            </tr>
-            <tr>
-              <td>Foldable Mini Drone</td>
-              <td>78687</td>
-              <td>Due</td>
-              <td class="warning">Pending</td>
-              <td class="Primary">Details</td>
-            </tr>
-            <tr>
-              <td>Foldable Mini Drone</td>
-              <td>78687</td>
-              <td>Due</td>
-              <td class="warning">Pending</td>
-              <td class="Primary">Details</td>
-            </tr>
-            <tr>
-              <td>Foldable Mini Drone</td>
-              <td>78687</td>
-              <td>Due</td>
-              <td class="warning">Pending</td>
-              <td class="Primary">Details</td>
-            </tr>
-            <tr>
-              <td>Foldable Mini Drone</td>
-              <td>78687</td>
-              <td>Due</td>
-              <td class="warning">Pending</td>
-              <td class="Primary">Details</td>
-            </tr>
+            </tr> -->
           </tbody>
         </table>
         <a href="#">Show all</a>
@@ -294,6 +266,7 @@
     </div>
   </div>
 </body>
+<script src="orders.js"></script>
 <script src="index.js"></script>
 
 </html>
